fix(checkbox): z-index bug

--- a/src/stories/checkbox/Checkbox.module.scss
+++ b/src/stories/checkbox/Checkbox.module.scss
@@ -6,6 +6,7 @@
     gap: 12px;
     user-select: var(--pte-utils-defaultUserSelect);
     cursor: default;
+    z-index: -1;
     &button {
         all: unset;
     }
